# semtex_varkinvis

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  StartHere.txt  semtex.kdev4
cmake/: FindScotch.cmake  SemtexCommon.cmake  ThirdPartyMPI.cmake  ThirdPartyScotch.cmake
dns/: CMakeLists.txt  Makefile  dns.h  dnsanalysis.cpp  drive.cpp  fieldforce.cpp  fieldforce.h  integrate.cpp  integrates.cpp  nonlinear.cpp
doc/: Doxyfile  Makefile  userguide.bib  userguide.tex
dog/: CMakeLists.txt  Makefile  README  analysis.cpp  auxfield.cpp  auxfield.h  bcmgr.cpp  combine.cpp  dog-rsi  domain.cpp  domain.h  drive-rsi.cpp  drive.cpp  edge.cpp  feml.cpp  field.cpp  field.h  flipmap.cpp  geometry.cpp  geometry.h  integrate.cpp  lns.cpp  normalise.cpp  normalize.cpp  reflect.cpp  stab.h  stabanalysis.cpp  symmetrise.cpp  templated.f
dog/BH-arnoldi/: Mark10.mat  README  arnoldi.cpp  iohb.c
dog/doc/: Makefile  guidedog.tex  userguide.bib
dog/testcases/: README
dog/testcases/cavityTW/: testrun
dog/testcases/chan2D/: testrun
dog/testcases/cylinder3D/: testrun
dog/testcases/pulseChan/: chan3.bhs  testrun
dog/testcases/stenosis3D/: testrun
dog/testcases/swirl3D/: testrun
elliptic/: CMakeLists.txt  drive.cpp  helmholtz.cpp
femlib/: CMakeLists.txt  Makefile  README.md  canfft.f  cfemdef.h  cfemlib.h  defaults.h  family.c  femlib.h  filter.c  fourier.c  initial.y  mapping.c  matops.F  message.c  netlib.f  operators.c  polylib.c  polyops.c  sparsepak.F  temfftd.F
femlib/tests/: Makefile  shapes.C  testFFT.C
include/: auxfield.h  blas.h  boundary.h  cfemlib.h  condition.h  domain.h  edge.h  feml.h  numbersys.h
mesh/: MMBL  PCM  PMC2  PreCyl03  TG1600  cylkov1  cylkov2  helmholtz1  kovas1  laplace1  laplace3  laplace4  laplace5  laplace6  laplace7  pipe323  poisson1  sphere05  taylor2  taylor3  taylor4  tc0  tc1  tdrivcav1
python/: compose.py  fieldfile.py  findaroot.py  fpminmax.py  gmsh2sem.py  wavy.py
regress/: PMC2.ok  cylkov2.ok  kovas1.ok  kovas2.ok  kovas3.ok  kovas4.ok  laplace1.ok
sm/: meshplot.sm
src/: CMakeLists.txt  Makefile  analysis.cpp  analysis.h  assemblymap.cpp  assemblymap.h  auxfield.cpp  auxfield.h  bcmgr.cpp  bcmgr.h  boundary.cpp  boundarysys.cpp  boundarysys.h  bsys.cpp  bsys.h  condition.cpp  condition.h  data2df.cpp  domain.cpp  domain.h  edge.cpp  element.cpp  element.h  family.cpp  feml.cpp  field.cpp  field.h  geometry.cpp  geometry.h  history.cpp  integration.cpp  matrix.cpp  matrix.h  mesh.cpp  mesh.h  message.cpp  message.h  misc.cpp  misc.h  numbersys.cpp  (+7 more)
test/: CMakeLists.txt  bench_mp  makeregress  makeregress_mp  makeregression  testconvg  testregress  testregress_mp  testregression  testsuite
utility/: CMakeLists.txt  Makefile  README.md  addfield.cpp  assemble.cpp  avgdump.c  calc.cpp  chop.c  compare.cpp  convert.c  data2df_template.cpp  eneq.cpp  enumerate.cpp  index00  integral.cpp  interp.cpp  linedist  lowpass.cpp  mapmesh.cpp  massmat.cpp  meshplot.cpp  meshpr.cpp  moden.c  modep.cpp  noiz.c  nonlin.cpp  normal.c  phase.cpp  pline  preplot.c  probe.cpp  project.cpp  psplot.h  rayavg  rectmesh.cpp  repeatxy.c  repeatz.c  repmesh.cpp  resubmit  rstress.c  (+13 more)
veclib/: CMakeLists.txt  README  README.md  XMXM.c  cveclib.h  icount.c  ifirst.c  ixmax.c  ixmin.c  lany.c  lapack.h  lxsame.c  memory.c  util.c  utility.h  vdble.c  veclib.h  vsngl.c  xbrev.c  xclip.c  xcndst.c  xcopy.c  xfft.c  xfill.c  xgathr.c  xgathr_scatr.c  xgathr_scatr_sum.c  xgathr_sum.c  xiclip.c  xmask.c  xmxv.c  xmxva.c  xneg.c  xpolint.c  xramp.c  xrand.c  xsadd.c  xscatr.c  xscatr_sum.c  xsdiv.c  (+54 more)
